# autoprognosis

./: .gitignore  .isort.cfg  .pre-commit-config.yaml  .readthedocs.yml  CITATION.cff  README.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: release.yml  test.yml  test_R.yml  test_full.yml  test_pr.yml  test_tutorials.yml
.github/workflows/scripts/: release_linux.sh
docs/: README.md  adj_imputation.rst  adj_interpretability.rst  adj_prediction.rst  adj_preprocessing.rst  adj_studies.rst  automl.rst  benchmarks.rst  classifiers.rst  conf.py  examples.rst  explainers.rst  imputers.rst  index.rst  prediction.rst  preprocessing.rst  regression.rst  requirements.txt  risk_estimation.rst
scripts/: build_demonstrator.py  nb_test.py  pack_demonstrator.py  run_demonstrator.py
scripts/studies/: build_adj_biobank_cvd.sh  build_adj_biobank_diabetes.sh
src/adjutorium/: __init__.py  logger.py
src/adjutorium/apps/classification/: classification_template.py  classification_template_streamlit.py
src/adjutorium/apps/common/: banner.py  dash_reusable_components.py  login.py  pandas_to_dash.py  pandas_to_streamlit.py
src/adjutorium/apps/extras/: biobank_cvd.py  biobank_diabetes.py
src/adjutorium/apps/survival_analysis/: survival_analysis_template.py  survival_analysis_template_streamlit.py
src/adjutorium/deploy/: build.py  proto.py  run.py  utils.py
src/adjutorium/explorers/: classifiers.py  classifiers_combos.py  hooks.py  risk_estimation.py  risk_estimation_combos.py
src/adjutorium/explorers/core/: defaults.py  optimizer.py  selector.py
src/adjutorium/plugins/: __init__.py
src/adjutorium/plugins/core/: base_plugin.py  params.py
src/adjutorium/plugins/ensemble/: classifiers.py  risk_estimation.py
src/adjutorium/plugins/explainers/: __init__.py  base.py  plugin_invase.py  plugin_kernel_shap.py  plugin_lime.py  plugin_risk_effect_size.py  plugin_shap_permutation_sampler.py  plugin_symbolic_pursuit.py
src/adjutorium/plugins/imputers/: README.md  __init__.py  base.py  plugin_EM.py  plugin_em.py  plugin_gain.py  plugin_hyperimpute.py  plugin_ice.py  plugin_mean.py  plugin_median.py  plugin_mice.py  plugin_missforest.py  plugin_most_freq.py  plugin_most_frequent.py  plugin_nop.py  plugin_sinkhorn.py  plugin_softimpute.py
src/adjutorium/plugins/pipeline/: __init__.py  generators.py
src/adjutorium/plugins/prediction/: __init__.py  base.py
src/adjutorium/plugins/preprocessors/: README.md  __init__.py  base.py
src/adjutorium/plugins/uncertainty/: __init__.py  (+4 more)
src/adjutorium/studies/: _base.py  _preprocessing.py  classifiers.py  risk_estimation.py
src/adjutorium/utils/: datasets.py  distributions.py  metrics.py  parallel.py  pip.py  redis.py  report.py  risk_estimation.py  tester.py
src/autoprognosis/: __init__.py  logger.py  version.py
src/autoprognosis/deploy/: build.py  proto.py  run.py  utils.py
src/autoprognosis/explorers/: classifiers.py  classifiers_combos.py  hooks.py  regression.py  regression_combos.py  risk_estimation.py  risk_estimation_combos.py
src/autoprognosis/hooks/: __init__.py  base.py  default.py  wandb.py  wb.py
src/autoprognosis/plugins/: __init__.py
src/autoprognosis/studies/: _base.py  _preprocessing.py  classifiers.py  regression.py  risk_estimation.py
src/autoprognosis/utils/: data_encoder.py  distributions.py  encoder.py  metrics.py  parallel.py  pip.py  redis.py  report.py  risk_estimation.py  serialization.py  tester.py
tests/: conftest.py
tests/R/: test_classification.R  test_regression.R
tests/apps/: test_classifiers_app.py  test_survival_app.py
tests/bindings/R/: test_classification.R  test_classification_with_missing_data.R  test_regression.R  test_survival_analysis.R
tests/bugfixing/: test_ensemble_crash.py  test_not_fitted_error.py
tests/explorers/: explorers_mocks.py  test_classifiers.py  test_classifiers_combos.py  test_regression.py  test_regression_combos.py  test_risk_estimation.py  test_risk_estimation_combos.py  test_selector.py
tests/plugins/ensemble/: test_classifier.py  test_risk_estimation_ensemble.py
tests/plugins/explainers/: data_generation.py  test_invase.py  test_kernel_shap.py  test_lime.py  test_risk_effect_size.py  test_shap_permutation_sampler.py  test_symbolic_pursuit.py
tests/plugins/imputers/: test_api.py  test_em.py  test_gain.py  test_hyperimpute.py  test_ice.py  test_imputation_serde.py  test_imputers_api.py  test_mean.py  test_median.py  test_mice.py  test_missforest.py  test_most_freq.py  test_perf.py  test_sinkhorn.py  test_softimpute.py
tests/plugins/pipeline/: test_pipeline.py
tests/plugins/preprocessors/: test_preprocessing_api.py
tests/plugins/uncertainty/: test_cohort_explainer.py  test_conformal_prediction.py  test_jackknife.py
tests/plugins/utils/: test_cast.py  test_metrics.py  test_simulate.py
tests/studies/: helpers.py  test_classifiers_studies.py  test_preprocessing.py  test_regression_studies.py  test_risk_studies.py
tests/utils/: test_metrics.py  test_parallel.py
tutorials/automl/: tutorial_00_classification_study.ipynb  tutorial_01_automl_classification_with_imputation.ipynb  tutorial_01_survival_analysis_study.ipynb  tutorial_02_automl_survival_analysis_with_imputation.ipynb  tutorial_02_survival_analysis_study.ipynb  tutorial_03_automl_classification_with_imputation.ipynb  tutorial_03_automl_survival_analysis_with_imputation.ipynb  tutorial_04_regression.ipynb  tutorial_05_classification_with_explainers.ipynb  tutorial_06_automl_multiple_imputation_example.ipynb
tutorials/bindings/R/: tutorial_classification.R  tutorial_classification_with_missing_data.R  tutorial_regression.R  tutorial_survival_analysis.R
tutorials/demonstrators/: tutorial_00_build_a_demonstrator_classification.ipynb  tutorial_01_build_a_demonstrator_survival_analysis.ipynb
tutorials/plugins/: tutorial_00_imputation_plugins.ipynb  tutorial_01_preprocessing_plugins.ipynb  tutorial_02_classification_plugins.ipynb  tutorial_03_pipelines.ipynb  tutorial_04_interpretability.ipynb  tutorial_05_survival_analysis_plugins.ipynb  tutorial_06_regression_plugins.ipynb
(+270 files in other folders)
