[metadata]
name = adjutorium
description = A system for automating the design of predictive modeling pipelines tailored for clinical prognosis.
author = vanderschaar-lab
author_email =
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
url = https://www.vanderschaar-lab.com/

# Change if running only on Windows, Mac or Linux (comma-separated)
platforms = any

# Add here all kinds of additional classifiers as defined under
# https://pypi.python.org/pypi?%3Aaction=list_classifiers
classifiers =
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Intended Audience :: Healthcare Industry
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent


[options]
zip_safe = False
packages = find_namespace:
include_package_data = True
package_dir =
    =src
# Require a min/specific Python version (comma-separated conditions)
# python_requires = >=3.8

core_depends =
    catboost==1.0.3
    cloudpickle==2.0.0
    combo @ git+git://github.com/yzhao062/combo
    hyperimpute @ git+git://github.com/vanderschaarlab/hyperimpute@main
    joblib==1.1.0
    lifelines==0.26.4
    lightgbm==3.3.1
    lime==0.2.0.1
    loguru==0.5.3
    numpy==1.20.3
    optuna==2.10.0
    pandas==1.3.5
    pycox==0.2.2
    pytorch-tabnet==3.1.1
    redis==4.1.0
    scikit-learn==1.0.2
    scipy==1.7.3
    shap==0.40.0
    sklearn_pandas==2.2.0
    torch==1.9.1
    xgboost==1.5.1
    xgbse==0.2.3

depends =
    %(core_depends)s

install_requires =
    importlib-metadata; python_version<"3.8"
    %(depends)s


[options.packages.find]
where = src
exclude =
    tests

[options.extras_require]
# Add here additional requirements for extra features, to install with:
# `pip install adjutorium[PDF]` like:
# PDF = ReportLab; RXP

# Add here test requirements (semicolon/line-separated)
testing =
    setuptools
    bandit
    black
    black-nb
    darglint
    doc8
    flake8
    isort
    nbconvert
    nbformat
    pytest
    pytest-benchmark
    pytest-cov
    pytest-xdist[psutil]
    pytest-xprocess
    pre-commit
    seaborn
    matplotlib
    tabulate
    click

[tool:pytest]
# Specify command line options as you would do when invoking pytest directly.
# e.g. --cov-report html (or xml) for html/xml output or --junitxml junit.xml
# in order to write a coverage file that can be read by Jenkins.
# CAUTION: --cov flags may prohibit setting breakpoints while debugging.
#          Comment those flags to avoid this py.test issue.
norecursedirs =
    dist
    build
    .tox
testpaths = tests
# Use pytest markers to select/deselect specific tests
# markers =
#     slow: mark tests as slow (deselect with '-m "not slow"')
#     system: mark end-to-end system tests

[bdist_wheel]
# Use this option if your package is pure-python
universal = 1

[devpi:upload]
# Options for the devpi: PyPI server and packaging tool
# VCS export must be deactivated since we are using setuptools-scm
no_vcs = 1
formats = bdist_wheel

[flake8]
# Some sane defaults for the code style checker flake8
max_line_length = 120
extend_ignore = E203, E231, E712, E501, W503
# ^  Black-compatible
#    E203 and W503 have edge cases handled by black
exclude =
    .tox
    build
    dist
    .eggs
    docs/conf.py

[pyscaffold]
# PyScaffold's parameters when the project was created.
# This will be used when updating. Do not change!
version = 4.0.1
package = adjutorium
extensions =
    no_tox
    pre_commit
